--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.17",
     "next": "14.2.15",
     "next-themes": "^0.4.3",
     "react": "^18",
