--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "framer-motion": "^11.11.17",
     "next": "14.2.15",
     "next-themes": "^0.4.3",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "typescript": "^5"
   }
 }
